Estructura index.html

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,9 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swip</title>
+    <title>Swip - Moda personalizada</title>
+    <link rel="shortcut icon" href="/public/images/logo/favicon.ico">
 </head>
 <body>
-    
+    <header>
+        <!-- Header -->
+    <!-- //Logotipo de la web
+    //Barra de navegacion (?) -->
+    <section></section>
+    <section></section>
+    <section>
+        <div> </div>
+        <div> </div>
+    </section>
+    <section>
+        <div> </div>
+        <div> </div>
+    </section>
+    </header>
+
+
+    <main>
+        <nav> 
+            <ul  type = "none"> 
+                <li><a href = "#" >Hoodies</a></li>
+                <li><a href = "#" >Jeans</a></li>
+                <li><a href = "#" >Remeras</a></li>
+                <li><a href = "#" >Camperas</a></li>
+                <li><a href = "#" >Tote bag</a></li>
+                <li><a href = "#" >¿Cómo encargar?</a></li>
+            </ul>
+        </nav>    
+         <!-- //banner
+    //guia de tallas
+    // imagen no definida -->
+    <section id ="banner">
+        
+
+    </section>
+    <section> 
+
+    </section>
+    <section> </section>
+    </main>
+
+
+
+    <footer>
+        <!-- //Ayuda
+        //Equipo
+        //Redes sociales
+        //@SWIP todos los derechos reservados -->
+       <div> </div> 
+       <div> </div>
+       <div> </div>
+       <div> </div>
+    </footer>
+
 </body>
 </html>
