--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,46 +8,47 @@
     <title>Swip - Moda personalizada</title>
     <link rel="shortcut icon" href="/public/images/logo/favicon.ico">
 </head>
+
 <body>
     <header>
         <!-- Header -->
-    <!-- //Logotipo de la web
+        <!-- //Logotipo de la web
     //Barra de navegacion (?) -->
-    <section></section>
-    <section></section>
-    <section>
-        <div> </div>
-        <div> </div>
-    </section>
-    <section>
-        <div> </div>
-        <div> </div>
-    </section>
+        <section></section>
+        <section></section>
+        <section>
+            <div> </div>
+            <div> </div>
+        </section>
+        <section>
+            <div> </div>
+            <div> </div>
+        </section>
     </header>
 
 
     <main>
-        <nav> 
-            <ul  type = "none"> 
-                <li><a href = "#" >Hoodies</a></li>
-                <li><a href = "#" >Jeans</a></li>
-                <li><a href = "#" >Remeras</a></li>
-                <li><a href = "#" >Camperas</a></li>
-                <li><a href = "#" >Tote bag</a></li>
-                <li><a href = "#" >¿Cómo encargar?</a></li>
+        <nav>
+            <ul type="none">
+                <li><a href="#">Hoodies</a></li>
+                <li><a href="#">Jeans</a></li>
+                <li><a href="#">Remeras</a></li>
+                <li><a href="#">Camperas</a></li>
+                <li><a href="#">Tote bag</a></li>
+                <li><a href="#">¿Cómo encargar?</a></li>
             </ul>
-        </nav>    
-         <!-- //banner
+        </nav>
+        <!-- //banner
     //guia de tallas
     // imagen no definida -->
-    <section id ="banner">
-        
+        <section id="banner">
 
-    </section>
-    <section> 
 
-    </section>
-    <section> </section>
+        </section>
+        <section>
+
+        </section>
+        <section> </section>
     </main>
 
 
@@ -56,11 +58,56 @@
         //Equipo
         //Redes sociales
         //@SWIP todos los derechos reservados -->
-       <div> </div> 
-       <div> </div>
-       <div> </div>
-       <div> </div>
+        <div class="col1footer">
+            <section>
+                <h4>Ayuda</h4>
+            </section>
+            <section>
+                <ul>
+                    <li>Envios</li>
+                    <li>Preguntas Frecuentes</li>
+                    <li>Como Devolver</li>
+                </ul>
+            </section>
+        </div>
+        <div class="col2footer">
+            <section>
+                <h4>Equipo</h4>
+            </section>
+            <section>
+                <div>
+                    <img src="" alt="Milagros">
+                </div>
+                <div>
+                    <img src="" alt="David">
+                </div>
+                <div>
+                    <img src="" alt="Julieth">
+                </div>
+                <div>
+                    <img src="" alt="Lautaro">
+                </div>
+                <div>
+                    <img src="" alt="Juan">
+                </div>
+            </section>
+        </div>
+        <div class="col3footer">
+            <section>
+                <h4>Redes Sociales</h4>
+            </section>
+            <section>
+                <div><img src="/Public/images/simbolos/facebook.png" alt="Facebook"></div>
+                <div><img src="/Public/images/simbolos/instagram.jpg" alt="Instagram"></div>
+                <div><img src="/Public/images/simbolos/whatsapp.png" alt="Whatsapp"></div>
+                <div><img src="/Public/images/simbolos/arroba.png" alt="Email"></div>
+            </section>
+        </div>
+        <div class="derechos">
+            <p>@SWIP, Todos los derechos reservados</p>
+        </div>
     </footer>
 
 </body>
+
 </html>
