--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,47 +9,38 @@
 </head>
 <body>
     <header>
-        <!-- Header -->
-    <!-- //Logotipo de la web
-    //Barra de navegacion (?) -->
-    <section></section>
-    <section></section>
-    <section>
-        <div> </div>
-        <div> </div>
-    </section>
-    <section>
-        <div> </div>
-        <div> </div>
-    </section>
     </header>
-
-
     <main>
-        <nav> 
+        <nav class = "navegacion"> 
             <ul  type = "none"> 
-                <li><a href = "#" >Hoodies</a></li>
-                <li><a href = "#" >Jeans</a></li>
-                <li><a href = "#" >Remeras</a></li>
-                <li><a href = "#" >Camperas</a></li>
-                <li><a href = "#" >Tote bag</a></li>
-                <li><a href = "#" >¿Cómo encargar?</a></li>
+                <li><a href = "/src/views/hoddies.html" >Hoodies</a></li>
+                <li><a href = "/src/views/jeans.html" >Jeans</a></li>
+                <li><a href = "/src/views/remeras.html" >Remeras</a></li>
+                <li><a href = "/src/views/camperas.html" >Camperas</a></li>
+                <li><a href = "/src/views/toteBag.html" >Tote bag</a></li>
             </ul>
         </nav>    
          <!-- //banner
     //guia de tallas
     // imagen no definida -->
-    <section id ="banner">
-        
+    <!-- seccion del banner -->
+    <!-- revisar el width -->
+    <section class = "banner">
 
     </section>
     <section> 
-
+        <img src = "/Public/images/imagenes ropa/Guia_de_tallas.jpg" width="40%">
+        <div class="boton">
+            <p><a href="/src/views/SizeGuide.html" target="_blank">Guía de tallas</a></p>
+        </div>
     </section>
-    <section> </section>
+    <section>
+        <img src = "/Public/images/imagenes ropa/Cómo_encargar.jpg" width="40%">
+        <div class = "boton">
+            <p><a href="/src/views/howToBuy.html" target="_blank">¿Cómo encargar?</a></p>
+        </div>
+    </section>
     </main>
-
-
 
     <footer>
         <!-- //Ayuda
