--- a/src/views/index.html
+++ b/src/views/index.html
@@ -71,10 +71,7 @@
     </main>
 
     <footer>
-        <!-- //Ayuda
-        //Equipo
-        //Redes sociales
-        //@SWIP todos los derechos reservados -->
+        <div class="tres_columnas">
         <div class="col1footer">
             <section>
                 <h4>Ayuda</h4>
@@ -92,21 +89,28 @@
                 <h4>Equipo</h4>
             </section>
             <section>
+                <div class="equipo">
                 <div>
-                    <img src="" alt="Milagros">
+                    <img src="" alt="">
+                    <p>Milagros</p>
                 </div>
                 <div>
-                    <img src="" alt="David">
+                    <img src="" alt="">
+                    <p>David</p>
                 </div>
                 <div>
-                    <img src="" alt="Julieth">
+                    <img src="" alt="">
+                    <p>Julieth</p>
                 </div>
                 <div>
-                    <img src="" alt="Lautaro">
+                    <img src="" alt="">
+                    <p>Lautaro</p>
                 </div>
                 <div>
-                    <img src="" alt="Juan">
+                    <img src="" alt="">
+                    <p>Juan</p>
                 </div>
+            </div>
             </section>
         </div>
         <div class="col3footer">
@@ -120,6 +124,7 @@
                 <div><img src="/images/simbolos/arroba.png" alt="Email"></div>
             </section>
         </div>
+    </div>
         <div class="derechos">
             <p>@SWIP, Todos los derechos reservados</p>
         </div>
