--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -44,20 +44,25 @@
 }
 
 
-
 .navegacion ul{
     display: flex;
     margin: 5px;
+    
+    
     
 }
 
 .navegacion ul li{
     margin: 5px;
+    text-align: end;
+    
+    
 }
 
 .navegacion ul li a{
     text-decoration: none;
     color: black;
+    
 }
 
 .boton p a{
@@ -105,4 +110,11 @@
 .derechos{
     text-align: center;
     margin-top: 20px;
+}
+
+@media (min-width: 480px){
+    .tres_columnas{
+        display: flex;
+        justify-content: space-around;
+    }
 }
