--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swip - Moda personalizada</title>
-    <link rel="shortcut icon" href="/public/images/logo/favicon.ico">
+    <link rel="shortcut icon" href="/images/logo/favicon.ico">
     <link rel="stylesheet" href="./css/styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     rel="stylesheet"/>
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div class="encabezado">
+    <div class="encabezado">
         <section>
             <div class="logo">
             <a href="./src/views/index.html"><img src="/images/Logo/logo.png"></a>
@@ -62,7 +62,10 @@
 
         </section>
         <section class="main_inferior">
-            <img src="images/imagenes ropa/Guia_de_tallas.jpg">
+            <div>
+                <img src="images/imagenes ropa/Guia_de_tallas.jpg" class="guia-tallas">
+                <img src="images/fondos/fondoop8.jpg" class="fondo3">
+            </div>
             <div class="boton">
                 <p><a href="/src/views/SizeGuide.html" target="_blank">Guía de tallas</a></p>
             </div>
