--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -8,6 +8,9 @@
 
 header{
     font-size: 10px;
+    background-image: url("/images/fondos/fondo1.jpg");
+    background-repeat: repeat;
+    background-size: 200px;
 }
 
 main{
@@ -16,7 +19,7 @@ main{
 
 .logo img{
     max-width: 40px;
-    margin: 7px 15px 0px 15px;
+    margin: 8px 15px 0px 8px
 }
 
 .encabezado{
@@ -30,9 +33,10 @@ main{
 }
 
 .login i{
-    color: black;
+    color: white;
     font-size: 20px;
-    margin: 3px 9px 3px 4px;
+    margin: 7px 9px 3px 4px;
+    text-shadow: 0 0 3px red;
 }
 
 /* se debe arreglar el boton*/
@@ -41,22 +45,23 @@ main{
     text-align: center;
     text-decoration: none;
     display: none;
-    border: solid 1px black;
-    border-radius: 5px;
-    padding: 3px 2px 3px 2px;
+    border: solid 1px black; 
+    border-radius: 5px; 
+    padding: 3px 2px 3px 2px; 
     margin-right: 16px;
     /* width: 28%;
-    padding: 8px 1px 8px 1px;
+    padding: 8px 1px 8px 1px; 
     margin: 0px 100px 0px 100px; */
-    background-color: #848484;
-    /* color: #ffffff;
+    background-color: #848484; 
+    /* color: #ffffff; 
     text-align: center; */
 }
 
 .bolsa i{
-    color: black;
+    color: white;
     font-size: 20px;
     margin: 3px 15px 3px 4px;
+    text-shadow: 0 0 3px red;
 }
 
 /* se debe arreglar el boton*/
@@ -65,23 +70,24 @@ main{
     text-decoration: none;
     color: black;
     display: none;
-    border: solid 1px black;
-    border-radius: 5px;
-    padding: 3px 2px 3px 2px;
+    border: solid 1px black; 
+    border-radius: 5px; 
+    padding: 3px 2px 3px 2px; 
     margin-right: 16px;
-    background-color: #848484;
+    background-color: #848484; 
 }
 
 .busqueda{
     width: 90%;
     text-align: center;
-    margin: 15px 0px 0px -35px;
+    margin: 19px 0px 0px -35px;
 }
 
 .search-bar{
     width: 70%;
     border-width: 1px;
     border-radius: 4px;
+    background-color: none;
 }
 
 button{
@@ -92,27 +98,55 @@ button{
 
 .compras{
     display: flex;
-    margin-top: 12px;
+    margin-top: 15px;
 }
+
+/* estilos Guia de tallas, como encargar, banner */
 
 .main_inferior{
     text-align: center;
 }
 
-.main_inferior img{
-    max-width: 200px;
+.guia-tallas{
+    position: relative;
+    max-width: 210px !important;
+    z-index: 1;
+    margin-top: 20px;
+  }
 
+.producto{
+    justify-content: center;
+}
+
+
+  /* fondo para la imagen de guia de tallas */
+  
+  /* .fondo3{
+    margin-top: 6px;
+    width: 250px;
+    position:absolute;
+    top: 82px;
+    left: 40px;
+    border:none;
+    z-index: -1;
+  } */
+
+.main_inferior img{
+    max-width: 240px;  
 }
 
 .navegacion ul{
+    font-weight: bold;
     display: flex;
-    margin: 5px;
+    justify-content: center;
+    margin: 20px 0px 6px 0px;
     list-style-type: none;
-    text-align: center;
+    text-align: center
 }
 
 .navegacion ul li{
     margin: 5px;
+    margin-top: 7px;
 }
 
 .navegacion ul li a{
@@ -120,54 +154,25 @@ button{
     color: black;
 }
 
-/* .boton{
-
-    display: flex;
+.boton a{
     text-align: center;
     text-decoration: none;
-    color: black;
-
-    border: solid 1px black;
-    width: 28px;
-} */
-
-.main_inferior p a{
-    display: flex;
-    justify-content: center;
-
-}
-
-.main_inferior p{
-    display: flex;
-    justify-content: center;
-    border: solid 1px black;
-    width: 28%;
-    padding: 8px 1px 8px 1px;
-    margin: 0px 100px 0px 100px;
-    background-color: #ffffff;
-    color: #ffffff;
-    border-radius: 5px;
+    color: black
 }
 
 .boton {
-    display: flex;
-    justify-content: space-around;
     border: solid 1px black;
-    width: 28%;
+    max-width: 60px;
     padding: 8px 1px 8px 1px;
-    margin: 0px 100px 0px 100px;
+    margin: 0 auto;
     background-color: #ffffff;
     color: #ffffff;
     border-radius: 5px;
-
+    text-align: center;
     }
 
-button{
-    display: flex;
-    justify-content: space-around;
-}
-
 .tres_columnas{
+    /* display: flex; */
     text-align: center;
 }
 
@@ -223,18 +228,5 @@ button{
         color: black;
         display: block;
     }
-    .col1footer section ul li{
-        /* no me funciona */
-        text-decoration: none;
-    }
-
-
 }
 
-@media (min-width: 768px){
-
-}
-
-@media (min-width: 1200px){
-
-}
