--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,41 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swip - Moda personalizada</title>
-    <link rel="shortcut icon" href="/public/images/logo/favicon.ico">
+    <link rel="shortcut icon" href="/images/logo/favicon.ico">
     <link rel="stylesheet" href="./css/styles.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    rel="stylesheet"/>
     <link href="https://use.fontawesome.com/releases/v5.0.8/js/brands.js" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <div class="encabezado">
-            <section>
-                <div class="logo">
-                    <a href="./src/views/index.html"><img src="/images/Logo/logo.png"></a>
-                </div>
-            </section>
-            <div class="busqueda">
-                <input class="search-bar"></input>
-                <button class="fas fa-search"></button>
+    <div class="encabezado">
+        <section>
+            <div class="logo">
+            <a href="./src/views/index.html"><img src="/images/Logo/logo.png"></a>
             </div>
-            <div class="login">
-                <div>
-                    <a href="/src/views/login.html"><i class="far fa-user-circle"></i></a>
-                </div>
-                <div class="texto-login">
-                    <p><a href="/src/views/login.html">Iniciar sesión</a></p>
-                </div>
+        </section>
+        <div class = "busqueda">
+            <input class="search-bar"></input>
+            <button class="fas fa-search"></button>
+        </div>
+        <div class="login">
+            <div >
+                <a href="/src/views/login.html"><i class="far fa-user-circle"></i></a> 
             </div>
-            <div class="compras">
-                <div class="bolsa">
-                    <a href="/src/views/productCart.html"><i class="fas fa-shopping-bag"></i></a>
-                </div>
-                <div class="carritocompras">
-                    <p><a href="/src/views/productCart.html">Carrito de compras</a></p>
-                </div>
+            <div class="texto-login">
+                <p><a href="/src/views/login.html">Iniciar sesión</a></p>
             </div>
         </div>
+        <div class="compras">
+            <div class="bolsa">
+                <a href="/src/views/productCart.html"><i class="fas fa-shopping-bag"></i></a>
+            </div>
+            <div class="carritocompras">
+                <p><a href="/src/views/productCart.html">Carrito de compras</a></p>
+            </div>
+        </div>
+    </div>
     </header>
     <main>
         <nav class="navegacion">
@@ -61,75 +62,74 @@
 
         </section>
         <section class="main_inferior">
-            <img src="images/imagenes ropa/Guia_de_tallas.jpg">
-            
-             <div class="boton">
-            <button href="/src/views/SizeGuide.html">Guía de tallas</button>
+            <div class="producto">
+                <img src="images/imagenes ropa/Guia_de_tallas.jpg" class="guia-tallas">
+                <!-- <img src="images/fondos/fondoop8.jpg" class="fondo3"> -->
+                <p class="boton"><a href="/src/views/SizeGuide.html" target="_blank">Guía de tallas</a></p>
             </div>
-
-            <img src="images/imagenes ropa/Cómo_encargar.jpg">
-            <!-- <div class="boton"> -->
-                <p><a href="/src/views/howToBuy.html" target="_blank">¿Cómo encargar?</a></p>
-            <!-- </div> -->
+            <div class="producto">
+                <img src="images/imagenes ropa/Cómo_encargar.jpg">
+                <p class="boton"><a href="/src/views/howToBuy.html" target="_blank">¿Cómo encargar?</a></p>
+            </div>
         </section>
     </main>
 
     <footer>
         <div class="tres_columnas">
-            <div class="col1footer">
-                <section>
-                    <h4>Ayuda</h4>
-                </section>
-                <section>
-                    <ul>
-                        <li>Envios</li>
-                        <li>Preguntas Frecuentes</li>
-                        <li>Como Devolver</li>
-                    </ul>
-                </section>
-            </div>
-            <div class="col2footer">
-                <section>
-                    <h4>Equipo</h4>
-                </section>
-                <section>
-                    <div class="equipo">
-                        <div>
-                            <img src="" alt="">
-                            <p>Milagros</p>
-                        </div>
-                        <div>
-                            <img src="" alt="">
-                            <p>David</p>
-                        </div>
-                        <div>
-                            <img src="" alt="">
-                            <p>Julieth</p>
-                        </div>
-                        <div>
-                            <img src="" alt="">
-                            <p>Lautaro</p>
-                        </div>
-                        <div>
-                            <img src="" alt="">
-                            <p>Juan</p>
-                        </div>
-                    </div>
-                </section>
-            </div>
-            <div class="col3footer">
-                <section>
-                    <h4>Redes Sociales</h4>
-                </section>
-                <section class="redes">
-                    <div><i class="fab fa-facebook"></i></div>
-                    <div><i class="fab fa-instagram"></i></div>
-                    <div><i class="fab fa-whatsapp"></i></div>
-                    <div><i class="fas fa-at"></i>
-                        </i></div>
-                </section>
-            </div>
+        <div class="col1footer">
+            <section>
+                <h4>Ayuda</h4>
+            </section>
+            <section>
+                <ul>
+                    <li>Envios</li>
+                    <li>Preguntas Frecuentes</li>
+                    <li>Como Devolver</li>
+                </ul>
+            </section>
         </div>
+        <div class="col2footer">
+            <section>
+                <h4>Equipo</h4>
+            </section>
+            <section>
+                <div class="equipo">
+                <div>
+                    <img src="" alt="">
+                    <p>Milagros</p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <p>David</p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <p>Julieth</p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <p>Lautaro</p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <p>Juan</p>
+                </div>
+            </div>
+            </section>
+        </div>
+        <div class="col3footer">
+            <section>
+                <h4>Redes Sociales</h4>
+            </section>
+            <section class="redes">
+                <div><i class="fab fa-facebook"></i></div>
+                <div><i class="fab fa-instagram"></i></div>
+                <div><i class="fab fa-whatsapp"></i></div>
+                <div><i class="fas fa-at"></i>
+                </i></div>
+            </section>
+        </div>
+    </div>
         <div class="derechos">
             <p>@SWIP, Todos los derechos reservados</p>
         </div>
