--- a/src/views/store.html
+++ b/src/views/store.html
@@ -16,6 +16,35 @@
         <div class="encabezado">
             <section>
                 <div class="logo">
+                <a href="./src/views/index.html"><img src="/images/Logo/logo.png"></a>
+                </div>
+            </section>
+            <div class = "busqueda">
+                <input class="search-bar"></input>
+                <button class="fas fa-search"></button>
+            </div>
+            <div class="login">
+                <div >
+                    <a href="/src/views/login.html"><i class="far fa-user-circle"></i></a> 
+                </div>
+                <div class="texto-login">
+                    <p><a href="/src/views/login.html">Iniciar sesión</a></p>
+                </div>
+            </div>
+            <div class="compras">
+                <div class="bolsa">
+                    <a href="/src/views/productCart.html"><i class="fas fa-shopping-bag"></i></a>
+                </div>
+                <div class="carritocompras">
+                    <p><a href="/src/views/productCart.html">Carrito de compras</a></p>
+                </div>
+            </div>
+        </div>
+    </header>
+
+        <div class="encabezado">
+            <section>
+                <div class="logo">
                     <a href="./src/views/index.html"><img src="/images/Logo/logo.png"></a>
                 </div>
             </section>
@@ -43,92 +72,87 @@
             </div>
 
             <section class="section-product">
-                <div class="page-nav">
-                    <h1>Mi tienda </h1>
-                    <button class="button-checkout">Pagar</button>
-                </div>
-
-                <section class="product-store">
+                               <section class="product-store">
                     <div class="page-content">
                         <div class="product-container">
                             <h3>Nombre</h3>
-                            <img src="images/store-img/producto1.jpg" alt="Camiseta chik">
+                            <img src="images/store/producto1.jpg" alt="Camiseta chik">
                             <h2>35900</h2>
                             <button class="button-add">Agregar</button>
                         </div>
 
                         <div class="product-container">
                             <h3>Nombre</h3>
-                            <img src="images/store-img/producto2.JPG" alt="Camiseta chik">
+                            <img src="images/store/producto2.JPG" alt="Camiseta chik">
                             <h2>35900</h2>
                             <button class="button-add">Agregar</button>
                         </div>
 
                         <div class="product-container">
                             <h3>Nombre</h3>
-                            <img src="images/store-img/producto3.JPG" alt="Camiseta chik">
+                            <img src="images/store/producto3.JPG" alt="Camiseta chik">
                             <h2>35900</h2>
                             <button class="button-add">Agregar</button>
                         </div>
                         <div class="product-container">
                             <h3>Nombre</h3>
-                            <img src="images/store-img/producto4.JPG" alt="Camiseta chik">
+                            <img src="images/store/producto4.JPG" alt="Camiseta chik">
                             <h2>35900</h2>
                             <button class="button-add">Agregar</button>
                         </div>
                         <div class="product-container">
                             <h3>Nombre</h3>
-                            <img src="images/store-img/producto5.JPG" alt="Camiseta chik">
+                            <img src="images/store/producto5.JPG" alt="Camiseta chik">
                             <h2>35900</h2>
                             <button class="button-add">Agregar</button>
                         </div>
                         <div class="product-container">
                             <h3>Nombre</h3>
-                            <img src="images/store-img/producto6.JPG" alt="Camiseta chik">
+                            <img src="images/store/producto6.JPG" alt="Camiseta chik">
                             <h2>35900</h2>
                             <button class="button-add">Agregar</button>
                         </div>
                         <div class="product-container">
                             <h3>Nombre</h3>
-                            <img src="images/store-img/producto7.JPG" alt="Camiseta chik">
+                            <img src="images/store/producto7.JPG" alt="Camiseta chik">
                             <h2>35900</h2>
                             <button class="button-add">Agregar</button>
                         </div>
                         <div class="product-container">
                             <h3>Nombre</h3>
-                            <img src="images/store-img/producto8.JPG" alt="Camiseta chik">
+                            <img src="images/store/producto8.JPG" alt="Camiseta chik">
                             <h2>35900</h2>
                             <button class="button-add">Agregar</button>
                         </div>
                         <div class="product-container">
                             <h3>Nombre</h3>
-                            <img src="images/store-img/producto9.JPG" alt="Camiseta chik">
+                            <img src="images/store/producto9.JPG" alt="Camiseta chik">
                             <h2>35900</h2>
                             <button class="button-add">Agregar</button>
                         </div>
                         <div class="product-container">
                             <h3>Nombre</h3>
-                            <img src="images/store-img/producto10.JPG" alt="Camiseta chik">
+                            <img src="images/store/producto10.JPG" alt="Camiseta chik">
                             <h2>35900</h2>
                             <button class="button-add">Agregar</button>
                         </div>
                         <div class="product-container">
                             <h3>Nombre</h3>
-                            <img src="images/store-img/producto11.JPG" alt="Camiseta chik">
+                            <img src="images/store/producto11.JPG" alt="Camiseta chik">
                             <h2>35900</h2>
                             <button class="button-add">Agregar</button>
                         </div>
                         <div class="product-container">
                             <h3>Nombre</h3>
-                            <img src="images/store-img/producto12.JPG" alt="Camiseta chik">
+                            <img src="images/store/producto12.JPG" alt="Camiseta chik">
                             <h2>35900</h2>
                             <button class="button-add">Agregar</button>
                         </div>
                     </div>
                 </section>
         </div>
-    </header>
-    <main>
+
+        <main>
         <nav class="navegacion">
             <ul type="none">
                 <li><a href="/src/views/hoddies.html">Hoodies</a></li>
