Detalles al Home

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -11,6 +11,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     rel="stylesheet"/>
     <link href="https://use.fontawesome.com/releases/v5.0.8/js/brands.js" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.0.4/js/v4-shims.js" rel="stylesheet"></script> 
+    <link href="https://use.fontawesome.com/releases/v5.0.4/js/fontawesome.js" rel="stylesheet"> </script>
 </head>
 
 <body>
@@ -62,13 +64,13 @@
 
         </section>
         <section class="main_inferior">
-            <div class="producto">
-                <img src="images/imagenes ropa/Guia_de_tallas.jpg" class="guia-tallas">
+            <div class="informacion_tallas_compras">
+                <img src="images/imagenes ropa/Guia-5.jpg" class="guia-tallas">
                 <!-- <img src="images/fondos/fondoop8.jpg" class="fondo3"> -->
                 <p class="boton"><a href="/src/views/SizeGuide.html" target="_blank">Guía de tallas</a></p>
             </div>
-            <div class="producto">
-                <img src="images/imagenes ropa/Cómo_encargar.jpg">
+            <div class="informacion_tallas_compras">
+                <img src="images/imagenes ropa/Cómo_encargar5.jpg" class="encargos">
                 <p class="boton"><a href="/src/views/howToBuy.html" target="_blank">¿Cómo encargar?</a></p>
             </div>
         </section>
