--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -19,7 +19,7 @@ main{
 
 .logo img{
     max-width: 40px;
-    margin: 8px 15px 0px 8px
+    margin: 8px 15px 1px 8px
 }
 
 .encabezado{
@@ -36,12 +36,14 @@ main{
     color: white;
     font-size: 20px;
     margin: 7px 9px 3px 4px;
-    text-shadow: 0 0 3px red;
+    text-shadow: 0 0 1.5px red;
+    border-width: 0.1;
 }
-
 /* se debe arreglar el boton*/
 
-.texto-login p a{
+.texto-login a{
+
+    font-size: 7px;
     text-align: center;
     text-decoration: none;
     display: none;
@@ -61,11 +63,11 @@ main{
     color: white;
     font-size: 20px;
     margin: 3px 15px 3px 4px;
-    text-shadow: 0 0 3px red;
+    text-shadow: 0 0 1.5px red;
 }
 
 /* se debe arreglar el boton*/
-.carritocompras p a{
+.carritocompras a{
     text-align: center;
     text-decoration: none;
     color: black;
@@ -74,7 +76,8 @@ main{
     border-radius: 5px; 
     padding: 3px 2px 3px 2px; 
     margin-right: 16px;
-    background-color: #848484; 
+    opacity: 0.2;
+    background-image: url("/images/fondos/fondo_1_header_horizontal.jpg")
 }
 
 .busqueda{
@@ -87,13 +90,21 @@ main{
     width: 70%;
     border-width: 1px;
     border-radius: 4px;
-    background-color: none;
+    background-image: url("/images/fondos/fondo_1_header_horizontal.jpg");
+    opacity: 0.2;
+    border-color: #ffffff;
 }
 
 button{
-    border-width: 0px;
-    background-color: white;
-    width: 35%px;
+    background-color: transparent;
+    border: none;
+    color: white;
+    width: 40%px;
+    text-shadow: 0 0 1.5px red;
+}
+
+.fasfa-search{
+    background-color: black;
 }
 
 .compras{
@@ -103,40 +114,8 @@ button{
 
 /* estilos Guia de tallas, como encargar, banner */
 
-.main_inferior{
-    text-align: center;
-}
-
-.guia-tallas{
-    position: relative;
-    max-width: 210px !important;
-    z-index: 1;
-    margin-top: 20px;
-  }
-
-.producto{
-    justify-content: center;
-}
-
-
-  /* fondo para la imagen de guia de tallas */
-  
-  /* .fondo3{
-    margin-top: 6px;
-    width: 250px;
-    position:absolute;
-    top: 82px;
-    left: 40px;
-    border:none;
-    z-index: -1;
-  } */
-
-.main_inferior img{
-    max-width: 240px;  
-}
-
 .navegacion ul{
-    font-weight: bold;
+    /* font-weight: bold; */
     display: flex;
     justify-content: center;
     margin: 20px 0px 6px 0px;
@@ -154,21 +133,71 @@ button{
     color: black;
 }
 
+.main_inferior{
+    text-align: center;
+}
+
+.informacion_tallas_compras{
+    display: flex;
+    align-items:flex-end ;
+    justify-content: space-around;
+    margin: 0px 0px 10px 0px !important;
+}
+
+.guia-tallas{
+    border: 0.4px solid gray;
+    padding: 5px;
+    width: 240px;
+    z-index: -1;
+    margin-top: 10px;
+    position: static;
+  }
+
+.encargos{
+    border: 0.4px solid gray;
+    padding: 5px;
+    width: 240px;
+    position: static;
+}
+
+  /* fondo para la imagen de guia de tallas */
+  
+  /* .fondo3{
+    margin-top: 6px;
+    width: 250px;
+    position:absolute;
+    top: 82px;
+    left: 40px;
+    border:none;
+    z-index: -1;
+  } */
+
+.main_inferior img{
+    max-width: 240px;  
+}
+
+
 .boton a{
     text-align: center;
     text-decoration: none;
-    color: black
+    color: black;
+    font-weight: bold;
 }
 
 .boton {
+    font-size: 6.8px;
     border: solid 1px black;
     max-width: 60px;
-    padding: 8px 1px 8px 1px;
-    margin: 0 auto;
-    background-color: #ffffff;
+    padding: 8px 8px 8px 8px;
+    margin-bottom: 12px;
+    /* margin: 0 auto; */
+    /* margin-left: 90px; */
+    background: transparent;
     color: #ffffff;
     border-radius: 5px;
     text-align: center;
+    position: absolute;
+    justify-content: center;
     }
 
 .tres_columnas{
