--- a/src/views/store.html
+++ b/src/views/store.html
@@ -19,10 +19,12 @@
                 <a href="./src/views/index.html"><img src="/images/Logo/logo.png"></a>
                 </div>
             </section>
+            <section></section>
             <div class = "busqueda">
                 <input class="search-bar"></input>
                 <button class="fas fa-search"></button>
             </div>
+           </section>
             <div class="login">
                 <div >
                     <a href="/src/views/login.html"><i class="far fa-user-circle"></i></a> 
