--- a/Public/css/store.css
+++ b/Public/css/store.css
@@ -1,3 +1,13 @@
+header{
+  font-size: 10px;
+  background-image: url("/images/fondos/fondo1.jpg");
+  background-repeat: repeat;
+  background-size: 200px;
+}
+
+
+
+
 .section-product{
     margin: 15px;
     background-color: aliceblue;
