creacion banner responsive

--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -113,6 +113,47 @@ button{
 }
 
 /* estilos Guia de tallas, como encargar, banner */
+.banner{
+    display: none;
+    width:680px;
+    height: auto;
+    margin: 50px auto 0;
+    overflow: hidden; 
+    /* oculta todo lo que esta en el width y height de la imagen */
+    
+}
+
+.banner ul{
+    display: flex;
+    padding: 0;
+    width: 400%;
+
+    animation: slide 20s infinite alternate ease-in-out;
+}
+
+.banner li{
+    list-style: none;
+    width: 100%;
+}
+
+.banner img{
+    width: 100%;
+}
+
+@keyframes slide{
+    0% {margin-left: 0%;}
+    20% {margin-left: 0%;}
+
+    25% {margin-left: -100%;}
+    45% {margin-left: -100%;}
+
+    50% {margin-left: -200%;}
+    70% {margin-left: -200%;}
+
+    75% {margin-left: -300%;}
+    95% {margin-left: -300%;}
+
+}
 
 .navegacion ul{
     /* font-weight: bold; */
@@ -201,7 +242,6 @@ button{
     }
 
 .tres_columnas{
-    /* display: flex; */
     text-align: center;
 }
 
@@ -242,6 +282,28 @@ button{
 }
 
 @media (min-width: 480px){
+    .tres_columnas{
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .texto-login p a{
+        text-decoration: none;
+        color: black;
+        display: block;
+    }
+    .carritocompras p a{
+        text-decoration: none;
+        color: black;
+        display: block;
+    }
+}
+
+@media (min-width: 780px){
+    .banner{
+        display: block;
+    }
+
     .tres_columnas{
         display: flex;
         justify-content: space-around;
