--- a/src/views/index.html
+++ b/src/views/index.html
@@ -59,10 +59,16 @@
     //guia de tallas
     // imagen no definida -->
         <!-- seccion del banner -->
+        <div class="banner">
+            <ul>
+                <li><img src="/images/slider/slide1.jpg" alt=""></li>
+                <li><img src="/images/slider/slide2.jpg" alt=""></li>
+                <li><img src="/images/slider/slide3.jpg" alt=""></li>
+                <li><img src="/images/slider/slide4.jpg" alt=""></li>
+            </ul>
+        </div>
         <!-- revisar el width -->
-        <section class="banner">
-
-        </section>
+        
         <section class="main_inferior">
             <div class="informacion_tallas_compras">
                 <img src="images/imagenes ropa/Guia-5.jpg" class="guia-tallas">
